# cs4380-emulator-assembler

./: .gitignore  CMakeLists.txt  README.md
assembler/: .asm4380.py.swp  asm4380.py  myTests.py
assembler/results/: cmpInstructions.asm  encoder  encoder.cpp  fibonacci1.asm  logicInstructions.asm  newDirectives.asm  newMovInstructions.asm  newTrp.asm  prog_2.asm  prog_b.asm  prog_c.asm  prog_e.asm  simple2.asm  stack1.asm  stack2.asm  stack3.asm  stack4.asm  valid1.asm  valid2.asm  validArrayInit.asm
assembler/testFiles/: .fibonacci3.asm.swp  .prime3.asm.swp  Trp1.asm  Trp4.asm  allInstructions.asm  allInstructions2.asm  arithmetic.asm  arithmetic2.asm  callInvalidFunction.asm  cmpInstructions.asm  duplicateFunction.asm  fibonacci1.asm  fibonacci2.asm  fibonacci3.asm  in.asm  invalidCodeSection.asm  invalidDataSection.asm  invalidDirective.asm  invalidDirective2.asm  invalidInstr.asm  invalidInstr2.asm  invalidLabel.asm  invalidLabel2.asm  invalidMain.asm  logicInstructions.asm  missing#.asm  missingLabel.asm  modulus.asm  movInstructions.asm  movInstructions2.asm  movInstructions3.asm  newDirectives.asm  newJmpInstructions.asm  newMovInstructions.asm  newTrp.asm  prime.asm  prime2.asm  prime3.asm  primeGenerator.asm  prog_a.asm  (+17 more)
include/: emu4380.h
src/: CMakeCache.txt  Makefile  cmake_install.cmake  emu4380  emu4380.cpp  main.cpp  myTests.cpp  runTests
